--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/MKhour/geode#readme",
   "dependencies": {
+    "cohere-ai": "^6.1.0",
     "express": "^4.18.2",
     "password-generator": "^2.1.0"
   }
