--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/MKhour/geode#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "password-generator": "^2.1.0"
+    "password-generator": "^2.1.0",
+    "react-router-dom": "^6.9.0"
   }
 }
